Bug 1709987: Call MsaaShutdown() when shutting down the ApplicationAccessible. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D114567